Started infrastructure for the map view

--- a/kartwheel/app/src/main/res/layout/activity_race_sign_up.xml
+++ b/kartwheel/app/src/main/res/layout/activity_race_sign_up.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <fragment
-        android:id="@+id/fragment"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:name="us.handstand.kartwheel.fragment.race.RaceSignUpFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
