--- a/kartwheel/app/src/main/res/layout/activity_race_sign_up.xml
+++ b/kartwheel/app/src/main/res/layout/activity_race_sign_up.xml
@@ -7,9 +7,7 @@
 
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:name="us.handstand.kartwheel.fragment.race.RaceSignUpFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        tools:layout="@layout/fragment_race_sign_up" />
+        android:layout_alignParentTop="true" />
 </android.support.design.widget.CoordinatorLayout>
